  * Updated Firefox, LibreOffice and Control Centre icons.
  * Removed links on software icons. Users were getting confused why
  this opened a web page.
  * Only use one FontAwesome font supported by WebKit.

  [ Martin Wimpress ]
  * Added miscellaneous tasks to update cache, fix an incomplete install
  and fix broken dependencies.
  * Installing Adobe Flash now uses flashplugin-installer.
  * Update PPAs for Veracrypt and X2Go.

 -- Martin Wimpress <code@flexion.org>  Sat, 02 Jan 2016 13:17:21 +0000

ubuntu-mate-welcome (16.04.0) xenial; urgency=medium

  * Overhaul of the user interface.
  * Context menu removed. Closes (LP: #1480718)
  * Detects if repository is available. Closes (LP: #1500533)
  * Fixes re-install of Minecraft. Closes (LP: #1516338)
  * Updates process name.
  * Added Variety, Gnote, Planner, gnome-schedule, Redshift.
  * Updated Terminator, VirtualBox, Simple Screen Recorder, Minecraft.
  * Closes (LP: #1525934)

 -- Martin Wimpress <code@flexion.org>  Tue, 08 Dec 2015 10:01:33 +0000

ubuntu-mate-welcome (1.0.3.5) wily; urgency=medium

  * Closes (LP: #1506530)
  * Disable Synapse, segfaults on Wily.
  * Disable Simple Screen Recorder, not installable on Wily.

 -- Martin Wimpress <code@flexion.org>  Thu, 15 Oct 2015 16:22:41 +0100

ubuntu-mate-welcome (1.0.3.4) wily; urgency=medium

  * Closes (LP: #1499621)
  * Fix Universal Access heading not appearing.
  * Fix compatible architectures for Steam and Handbrake.
  * Fix broken Launchpad link (LP: #1480721)
  * Correct MakeMKV repository,
  * Correct Spotify repository and architecture support.
  * Correct VirtualBox version.
  * Correct X2Go repository.

 -- Martin Wimpress <code@flexion.org>  Mon, 21 Sep 2015 15:25:43 +0100

ubuntu-mate-welcome (1.0.3.3) wily; urgency=medium

  * Closes (LP: #1497789)
  * Fix SpiderOakONE conflict dialogue.
  * Correct Eviacam repository.
  * Correct Minecraft repository.

 -- Martin Wimpress <code@flexion.org>  Sun, 20 Sep 2015 22:07:11 +0100
