@@ -923,6 +923,19 @@
         </div>
         <div id="Programming" class="hideSection">
           <h2>Programming</h2>
+
+          <img class="left" src="img/applications/bzr.png" />
+          <p><b>Bazaar</b> is a distributed version control system
+          designed to be easy to use and intuitive, able to adapt to
+          many workflows, reliable, and easily extendable.</p>
+          <p class="text-right">
+          <a class="btn" href="cmd://link?http://bazaar.canonical.com/en/"><span class="fa fa-info"></span></a>
+          <a class="bzr-install btn btn-success" href="cmd://apt-install?bzr"><span class="fa fa-download"></span>&nbsp; Install</a>
+          <a class="bzr-reinstall btn" href="cmd://apt-install?bzr"><span class="fa fa-refresh"></span>&nbsp; Reinstall</a>
+          <a class="bzr-remove btn btn-danger" href="cmd://apt-remove?bzr"><span class="fa fa-trash"></span>&nbsp; Remove</a>
+          </p>
+          <hr class="soften" />
+
           <img class="left" src="img/applications/geany.png" />
           <p><b>Geany</b> is a small and lightweight integrated
           development environment. It was developed to provide a small
