@@ -17,6 +17,7 @@ ubuntu-mate-welcome (16.04.1~xenial1.1) xenial; urgency=medium
   [ Martin Wimpress ]
   * Added miscellaneous tasks to update cache, fix an incomplete install
   and fix broken dependencies.
+  * Added Bazaar and Git.
   * Installing Adobe Flash now uses flashplugin-installer.
   * Update PPAs for Veracrypt and X2Go.
 
